# DBusNative

MultiInterface/: CMakeLists.txt  main.cpp
MultiInterface/Interface/: CMakeLists.txt  Interface.cpp  Interface.h
Receiver/: CMakeLists.txt  Receiver.cpp  Receiver.h  main.cpp  run.sh
Sender/: CMakeLists.txt  Sender.cpp  Sender.h  main.cpp  main.qml  run.sh
